--- a/hall.html
+++ b/hall.html
@@ -1,53 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
     <header class="header">
-<nav>
-    <ul>
-        <li><a href="">About us</a></li>
-        <li><a href="">Delivery</a></li>
-        <li><a href="">Menu</a></li>
-        <li><a href="">Contacts</a></li>
-        <li><a href="">Reviews</a></li>
-    </ul>
-</nav>
+      <nav>
+        <ul>
+          <li><a href="">About us</a></li>
+          <li><a href="">Delivery</a></li>
+          <li><a href="">Menu</a></li>
+          <li><a href="">Contacts</a></li>
+          <li><a href="">Reviews</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section>
-            <h1>TRADITIONAL 
-                ARTISAX BAKERY</h1>
-        </section>
-        <section>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-        </section>
-        <section>
-            <button>SHOP NOW</button>
-            <ul>
-                <li><img src="" alt=""><span>$8.00(kg)</span>
-                    <p>American Cockie</p><button></button></li>
-                    <li><img src="" alt=""><span>$4.00</span>
-                        <p>Crushed with
-                            chockolate</p><button></button></li>
-                        <li><img src="" alt=""><span>For piece 
-                            $4.00</span>
-                            <p>Blackberry pie</p><button></button></li>
-            </ul>
-        </section>
-        <section></section>
-        <section></section>
-
+      <section>
+        <h1>TRADITIONAL ARTISAX BAKERY</h1>
+      </section>
+      <section>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged.
+        </p>
+      </section>
+      <section>
+        <button>SHOP NOW</button>
+        <ul>
+          <li>
+            <img src="" alt="" /><span>$8.00(kg)</span>
+            <p>American Cockie</p>
+            <button>BUY</button>
+          </li>
+          <li>
+            <img src="" alt="" /><span>$4.00</span>
+            <p>Crushed with chockolate</p>
+            <button>BUY</button>
+          </li>
+          <li>
+            <img src="" alt="" /><span>For piece $4.00</span>
+            <p>Blackberry pie</p>
+            <button>BUY</button>
+          </li>
+        </ul>
+      </section>
+      <!-- секція меню -->
+      <section>
+        <h2>Menu</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h3>Breads</h3>
+            <button type="button">Order</button>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Bekary</h3>
+            <button type="button">Order</button>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Cokes&Pretzels</h3>
+            <button type="button">Order</button>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Coockies&Pretzels</h3>
+            <button type="button">Order</button>
+          </li>
+        </ul>
+      </section>
+      <!-- наші переваги -->
+      <section>
+        <h2>Quality our bekary</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <ol>
+              <li>1.Flour with fresh wheat</li>
+              <li>2.New drozzhi</li>
+              <li>3.Fresh eggs</li>
+              <li>4.Water from the well</li>
+            </ol>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <ol>
+              <li>1.Flour with fresh wheat</li>
+              <li>2.New drozzhi</li>
+              <li>3.Fresh eggs</li>
+              <li>4.Water from the well</li>
+            </ol>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <ol>
+              <li>1.Flour with fresh wheat</li>
+              <li>2.New drozzhi</li>
+              <li>3.Fresh eggs</li>
+              <li>4.Water from the well</li>
+            </ol>
+          </li>
+        </ul>
+      </section>
+      <!-- наша робота -->
+      <section>
+        <h2>Why TRADITIONALARTISAX BAKERY ?</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h3>Order at home</h3>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Fresh food</h3>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Speed Delivery 24 h</h3>
+          </li>
+        </ul>
+      </section>
+      <!-- контати -->
+      <section>
+        <h2>Where</h2>
+        <div>
+          <div><img src="" alt="" /></div>
+          <div>
+            <h3>How</h3>
+            <a href="+38 055 123 13 12"></a>
+            <a href="">Tik tok.:@TR.Bekary</a>
+            <a href="">Inst:@TR.Bekary</a>
+          </div>
+          <div>
+            <h3>Whean</h3>
+            <span>with 8:30 to 20:30</span>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-
+      <h2>TRADITIONAL ARTISAX BAKERY</h2>
+      <span> We want be helthy </span>
+      <ul>
+        <li>
+          <h3>About</h3>
+          <p>About us Features News & Blog</p>
+        </li>
+        <li>
+          <h3>Movement</h3>
+          <p>What Eatly Support Us</p>
+        </li>
+        <li>
+          <h3>Company</h3>
+          <p>Why Eatly Capital Securaty</p>
+        </li>
+      </ul>
+      <p>&#64;2022 Eatly.All right riserved.</p>
     </footer>
-</body>
+  </body>
 </html>
