--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header class="header">
       <div class="container">
       <nav>
-        <ul>
-          <li><a class="menu-link" href="">About us</a></li>
-          <li><a class="menu-link" href="">Delivery</a></li>
-          <li><a class="menu-link" href="">Menu</a></li>
-          <li><a class="menu-link" href="">Contacts</a></li>
-          <li><a class="menu-link" href="">Reviews</a></li>
+        <ul class="menu-list">
+          <li class="menu-item"><a class="menu-link" href="">About us</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Delivery</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Menu</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Reviews</a></li>
         </ul>
       </nav>  
       </div>
@@ -30,7 +30,7 @@
       <section class="hero">
         <div class="container">
          <h1 class="hero-tital">TRADITIONAL ARTISAX BAKERY</h1>
-        <p>
+        <p class="hero-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
           since the 1500s, when an unknown printer took a galley of type and
