--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           five centuries, but also the leap into electronic typesetting,
           remaining essentially unchanged.
         </p>
-        <button>SHOP NOW</button>
+        <button class="herobottom">SHOP NOW</button>
         <ul>
           <li>
             <img src="" alt="" /><span>$8.00(kg)</span>
