--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;900&family=Italiana&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <link
       rel="stylesheet"
@@ -43,46 +48,46 @@
           <li>
             <img src="" alt="" /><span>$8.00(kg)</span>
             <p>American Cockie</p>
-            <button>BUY</button>
+            <button class="buy">BUY</button>
           </li>
           <li>
             <img src="" alt="" /><span>$4.00</span>
             <p>Crushed with chockolate</p>
-            <button>BUY</button>
+            <button class="buy">BUY</button>
           </li>
           <li>
             <img src="" alt="" /><span>For piece $4.00</span>
             <p>Blackberry pie</p>
-            <button>BUY</button>
+            <button class="buy">BUY</button>
           </li>
         </ul> 
         </div>
         
       </section>
       <!-- секція меню -->
-      <section>
+      <section class="menu">
         <div class="container">
- <h2>Menu</h2>
+ <h2 class="menutitle">Menu</h2>
         <ul>
           <li>
             <img src="" alt="" />
-            <h3>Breads</h3>
-            <button type="button">Order</button>
+            <h3 class="menutitle2">Breads</h3>
+            <button type="button" class="menu-button">Order</button>
           </li>
           <li>
             <img src="" alt="" />
-            <h3>Bekary</h3>
-            <button type="button">Order</button>
+            <h3 class="menutitle2">Bekary</h3>
+            <button type="button" class="menu-button">Order</button>
           </li>
           <li>
             <img src="" alt="" />
-            <h3>Cokes&Pretzels</h3>
-            <button type="button">Order</button>
+            <h3 class="menutitle2">Cokes&Pretzels</h3>
+            <button type="button" class="menu-button">Order</button>
           </li>
           <li>
             <img src="" alt="" />
-            <h3>Coockies&Pretzels</h3>
-            <button type="button">Order</button>
+            <h3 class="menutitle2">Coockies&Pretzels</h3>
+            <button type="button" class="menu-button">Order</button>
           </li>
         </ul>
         </div>
